--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #150050;
+  width: 100%; height: 100%;
 }
 
 code {
@@ -13,4 +15,53 @@ code {
 }
 .App{
   text-align: center;
+}
+.textStyle{
+  color:white
+}
+.error{
+  display: grid;
+  place-content: center;
+  width: 100%;height: 100%;
+  position: absolute;
+}
+.first{
+  height: 100%;
+}
+.load{
+  position: absolute; 
+  width: 100%;height: 100%;
+  display: grid;
+  place-content: center;
+}
+.head{
+  background-color: #610094;
+  width: 90%;height: 40px;
+  color:white;
+  border-radius: 10px;
+  display: grid;
+  place-content: center;
+  margin-top:40px ;
+  margin-bottom:40px;
+}
+.register{
+  display: grid;
+  place-content: center;
+  margin-top: 20px;
+}
+.inputs{
+  width: 80%;
+}
+.submit{
+  width: 50%;
+  background-color: #3F0071;
+}
+.sign{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 20px;
+}
+.icons{
+  margin: 20px;
 }
