--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -7,6 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #150050;
   width: 100%; height: 100%;
+  /*display: grid;
+  place-content: center;*/
 }
 
 code {
@@ -34,20 +36,22 @@ code {
   display: grid;
   place-content: center;
 }
+.register{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .head{
   background-color: #610094;
-  width: 90%;height: 40px;
+  width: 60%;height: 40px;
   color:white;
   border-radius: 10px;
   display: grid;
   place-content: center;
-  margin-top:40px ;
-  margin-bottom:40px;
-}
-.register{
-  display: grid;
-  place-content: center;
-  margin-top: 20px;
+  margin-left: 70px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 .inputs{
   width: 80%;
@@ -64,4 +68,22 @@ code {
 }
 .icons{
   margin: 20px;
+}
+.login{
+  width: 100%;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+.link{
+  padding-right:15px;
+}
+.nav{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content:space-between;
+  align-items: center;
+  margin-top: 10px;
+  position: absolute;
 }
