--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -37,14 +37,12 @@ code {
   place-content: center;
 }
 .register{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  place-content: center;
 }
 .head{
   background-color: #610094;
-  width: 60%;height: 40px;
+  width: 70%;height: 40px;
   color:white;
   border-radius: 10px;
   display: grid;
@@ -72,6 +70,7 @@ code {
 .login{
   width: 100%;
   display:flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -85,5 +84,12 @@ code {
   justify-content:space-between;
   align-items: center;
   margin-top: 10px;
-  position: absolute;
+  
+}
+.viewtext{
+  color:white;
+}
+.home{
+  height: 100%;
+  width: 100%;
 }
